# lgtm

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: config.rs  lsp_client.rs  main.rs  theme.rs
crates/claude/: Cargo.toml
crates/claude/src/: lib.rs
crates/diff-core/src/: lib.rs
crates/gh/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
