[package]
name = "lgtm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lgtm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
brokk-bifrost = "0.8.0"
claude = { path = "../claude" }
diff-core = { path = "../diff-core" }
gh = { path = "../gh" }
git = { path = "../git" }
syntax = { path = "../syntax" }
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
# Must match gpui-component's lsp-types so its CompletionProvider signatures line up.
lsp-types = "0.97"
fuzzy-matcher = "0.3"
serde_json = { workspace = true }
libc = "0.2"
